Changed the HTML for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -91,7 +91,7 @@
           <p><a href="https://www.yelp.com/biz/bourbons-kitchen-and-cocktails-framingham">Bourbons</a> is an amazing
             restaurant located in Framingham, MA. The young owner, Luke Folley, is a native to the area. He's managed to build
             a gem of a restaurant in Framingham.</p>
-          <p>Visitors can expect creative, tasty cocktails, usually changing with the seasons. And the food is equally as good as the
+          <p>Visitors can expect creative, tasty cocktails, usually in tune with the seasons. And the food is equally as good as the
             drinks. Serving comfort and Americana food, Bourbons has become a local hotspot for its service, quailty, and atmosphere.</p>
           <p>Being a huge fan of the place, I thought it would be fun to create a sample menu page for some of their dishes.
             Click <a href="https://bourbons-menu.netlify.com/">here</a> to see my project.</p>
