Updated text in 3rd blog post

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -105,9 +105,9 @@
             you go along their tutorials.</p>
           <p>One of my favorite projects was making a partying robot, using CSS. Your client is an eccentric millionaire named Cotter.
             He hires you to build a robot that he can take with him when he goes partying.</p>
-          <p>You can click three different buttons. One turns on/off some laser lights for the robot. The other turns on/off Cotter
-            from dancing (so he can take a break). The last button changes the background color. Repeatedly pressing it creates a
-            strobe effect. Click <a href="https://dancing-robot.netlify.com/"> here</a> to try it out!</p>
+          <p>You can click three different buttons. One toggles some laser eyes for the robot. The other toggles Cotter's
+            dancing (so he can take a break). The last button changes the background color. Repeatedly pressing it creates a
+            strobe effect! Click <a href="https://dancing-robot.netlify.com/"> here</a> to try it out!</p>
           </div>
     </body>
 </html>
