--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,13 +11,14 @@
       max-width: 800px;
     }
 
-    /*this is name */
+    /*this is my name */
     h1 {
       font-family: 'Righteous', cursive;
       font-size: 45px;
       text-align: center;
       line-height: 47px;
       color: #ffffff;
+      margin-top: 5px;
     }
 
     /*Each Blog Post title*/
@@ -79,7 +80,7 @@
         <div class="first post">
             <h2>Mad-Lib Game!</h2>
             <small>published: 12.11.2019, 12:14</small>
-            <p>I recently created a <a href="https://mad-lib-game.netlify.com/">web app</a>. It's a mad-lib game.
+            <p>I recently created a <a href="https://mad-lib-game.netlify.com/"><b>web app</b></a>. It's a mad-lib game.
               For those that have never done a mad-lib before, you'll be asked for certain words (a noun, an adjective, etc).
               Then, a short, funny story will be generated.</p>
             <p>Feel free to share it with your friends! Take a screenshot and compare funny stories.</p>
@@ -89,25 +90,23 @@
             <h2>Sample Menu Page!</h2>
             <small>published: 12.11.2019, 12:50</small>
           <p><a href="https://www.yelp.com/biz/bourbons-kitchen-and-cocktails-framingham">Bourbons</a> is an amazing
-            restaurant located in Framingham, MA. The young owner, Luke Folley, is a native to the area. He's managed to build
-            a gem of a restaurant in Framingham.</p>
-          <p>Visitors can expect creative, tasty cocktails, usually in tune with the seasons. And the food is equally as good as the
-            drinks. Serving comfort and Americana food, Bourbons has become a local hotspot for its service, quailty, and atmosphere.</p>
-          <p>Being a huge fan of the place, I thought it would be fun to create a sample menu page for some of their dishes.
-            Click <a href="https://bourbons-menu.netlify.com/">here</a> to see my project.</p>
+            restaurant located in Framingham, MA. The young owner, Luke Folley, has managed to build
+            a gem of a restaurant in Framingham. Visitors can expect creative, tasty cocktails, usually in tune with the seasons.
+            And the food is equally as good as the drinks. Bourbons has become a local hotspot for its service, quailty, atmosphere,
+            and good Americana food.</p>
+          <p>Being a huge fan of the place, I thought it would be fun to create a <a href="https://bourbons-menu.netlify.com/"><b>sample menu</b></a>
+            page for some of their dishes, incorporating animation. It was pretty fun!</p>
           </div>
 
         <div class="third post">
             <h2>Partying Robot! (& Cotter, an Eccentric Millionaire)</h2>
             <small>published: 12.11.2019, 12:53</small>
-          <p>I've recently finished General Assembly's free tutorials at <a href="https://dash.generalassemb.ly/">Dash</a>. They walk
-            you through the basics of HTML, CSS, and JavaScript (with a little jquery too). They have you build a few simple sites as
-            you go along their tutorials.</p>
-          <p>One of my favorite projects was making a partying robot, using CSS. Your client is an eccentric millionaire named Cotter.
-            He hires you to build a robot that he can take with him when he goes partying.</p>
+          <p>I've recently finished General Assembly's free tutorials at <a href="https://dash.generalassemb.ly/">Dash</a>. One of my
+            favorite projects was making a partying robot, using CSS. Your client, an eccentric millionaire named Cotter, hires you
+            to build a robot that he can take with him when he goes partying.</p>
           <p>You can click three different buttons. One toggles some laser eyes for the robot. The other toggles Cotter's
             dancing (so he can take a break). The last button changes the background color. Repeatedly pressing it creates a
-            strobe effect! Click <a href="https://dancing-robot.netlify.com/"> here</a> to try it out!</p>
+            strobe effect! Click <a href="https://dancing-robot.netlify.com/"> <b>here</b></a> to try it out!</p>
           </div>
     </body>
 </html>
