Changed fonts to make more readable.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,6 @@
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Girassol|Noticia+Text|Permanent+Marker|Righteous&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Girassol|Noticia+Text|Permanent+Marker|Righteous&display=swap" rel="stylesheet">
+  
   <meta charset="UTF-8">
 
   <style>
@@ -27,7 +27,7 @@
       font-size: 28px;
       text-align: left;
       color: #e5e5e5;
-      text-decoration: underline;
+      text-decoration: underline overline;
       margin-bottom: 5px
     }
 
@@ -65,6 +65,7 @@
     }
 
     .project_link {
+      font-family: 'Fugaz One', cursive;
       font-size: 20px;
     }
   </style>
@@ -82,37 +83,37 @@
         </div>
 
         <div class="first post">
-            <h2>Mad-Lib Game!</h2>
-            <small>published: 12.11.2019, 12:14</small>
-            <p>I recently created a <a href="https://mad-lib-game.netlify.com/"><b class="project_link">web app</b></a>. It's a mad-lib game.
+          <h2>Mad-Lib Game!</h2>
+          <small>published: 12.11.2019, 12:14</small>
+            <p>I recently created a <a href="https://mad-lib-game.netlify.com/" class="project_link">web app</a>. It's a mad-lib game.
               For those that have never done a mad-lib before, you'll be asked for certain words (a noun, an adjective, etc).
               Then, a short, funny story will be generated.</p>
             <p>Feel free to share it with your friends! Take a screenshot and compare funny stories.</p>
         </div>
 
         <div class="second post">
-            <h2>Sample Menu Page!</h2>
-            <small>published: 12.11.2019, 12:50</small>
-          <p><a href="https://www.yelp.com/biz/bourbons-kitchen-and-cocktails-framingham">Bourbons</a> is an amazing
-            restaurant located in Framingham, MA. The young owner, Luke Folley, has managed to build
-            a gem of a restaurant in Framingham. Visitors can expect creative, tasty cocktails, usually in tune with the seasons.
-            And the food is equally as good as the drinks. Bourbons has become a local hotspot for its service, quailty, atmosphere,
-            and good Americana food.</p>
-          <p>Being a huge fan of the place, I thought it would be fun to create a
-            <a href="https://bourbons-menu.netlify.com/"><b class="project_link">sample menu</b></a> page for some of their dishes,
-            incorporating animation. It was pretty fun!</p>
+          <h2>Sample Menu Page!</h2>
+          <small>published: 12.11.2019, 12:50</small>
+            <p><a href="https://www.yelp.com/biz/bourbons-kitchen-and-cocktails-framingham">Bourbons</a> is an amazing
+              restaurant located in Framingham, MA. The young owner, Luke Folley, has managed to build
+              a gem of a restaurant in Framingham. Visitors can expect creative, tasty cocktails, usually in tune with the seasons.
+              And the food is equally as good as the drinks. Bourbons has become a local hotspot for its service, quailty, atmosphere,
+              and good Americana food.</p>
+            <p>Being a huge fan of the place, I thought it would be fun to create a
+              <a href="https://bourbons-menu.netlify.com/" class="project_link">sample menu</a> page for some of their dishes,
+              incorporating animation. It was pretty fun!</p>
           </div>
 
         <div class="third post">
-            <h2>Partying Robot! (& Cotter, an Eccentric Millionaire)</h2>
-            <small>published: 12.11.2019, 12:53</small>
-          <p>I've recently finished General Assembly's free tutorials at <a href="https://dash.generalassemb.ly/">Dash</a>. One of my
-            favorite projects was making a <a href="https://dancing-robot.netlify.com/"> <b class="project_link">partying robot</b></a>! Using CSS animation,
-            your client, an eccentric millionaire named Cotter, hires you to build a robot that he can take with him when he goes
-            partying.</p>
-          <p>You can click three different buttons. One toggles some laser eyes for the robot. The other toggles Cotter's
-            dancing (so he can take a break). The last button changes the background color. Repeatedly pressing it creates a
-            strobe effect! Click to try it out!</p>
+          <h2>Partying Robot!</h2>
+          <small>published: 12.11.2019, 12:53</small>
+            <p>I've recently finished General Assembly's free tutorials at <a href="https://dash.generalassemb.ly/">Dash</a>. One of my
+              favorite projects was making a <a href="https://dancing-robot.netlify.com/" class="project_link">partying robot</a>! Using CSS animation,
+              your client, an eccentric millionaire named Cotter, hires you to build a robot that he can take with him when he goes
+              partying.</p>
+            <p>You can click three different buttons. One toggles some laser eyes for the robot. The other toggles Cotter's
+              dancing (so he can take a break). The last button changes the background color. Repeatedly pressing it creates a
+              strobe effect! Click to try it out!</p>
           </div>
     </body>
 </html>
