--- a/blog/templates/blog/to_replace_postlist.html
+++ b/blog/templates/blog/to_replace_postlist.html
@@ -1,66 +1,110 @@
-{% load static %}
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Girassol|Noticia+Text|Permanent+Marker|Righteous&display=swap" rel="stylesheet">
+
+  <meta charset="UTF-8">
+
+  <style>
+    body {
+      margin: 0 auto;
+      background: url("https://i.imgur.com/6PUqJk1.jpg");
+      background-size: cover;
+      max-width: 800px;
+    }
+    /*this is my name */
+    h1 {
+      font-family: 'Righteous', cursive;
+      font-size: 45px;
+      text-align: center;
+      line-height: 47px;
+      color: #ffffff;
+      margin-top: 5px;
+    }
+    /*Each Blog Post title*/
+    h2 {
+      font-family: 'Girassol', cursive;
+      font-size: 28px;
+      text-align: left;
+      color: #e5e5e5;
+      text-decoration: underline overline;
+      margin-bottom: 5px
+    }
+    /*this is the 'Pupusas' line */
+    h4 {
+      font-family: 'Permanent Marker', cursive;
+      text-align: center;
+      font-size: 25px;
+      color: #ffffff;
+      margin-top: -20px;
+    }
+    /*this is the text in each blog post */
+    p {
+      font-family: 'Noticia Text', serif;
+      text-align: justify;
+      font-size: 18px;
+      line-height: 27px;
+      color: rgba(255,255,255,1);
+    }
+    /*this is the time stamp text*/
+    small {
+      color: white;
+      margin: 500px 0 0 0;
+    }
+    a {
+      color: white;
+    }
+    .post{
+      margin-bottom: 55px;
+    }
+    .project_link {
+      font-family: 'Fugaz One', cursive;
+      font-size: 20px;
+    }
+  </style>
+</head>
+
+
 <html>
     <head>
-      <title>Lito's blog</title>
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-      <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-      <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-
-      <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Girassol|Noticia+Text|Permanent+Marker|Righteous&display=swap" rel="stylesheet">
-  </head>
-
-  <body>
-      <div>
-          <h1>Carlos Castillo - Aspiring Developer</h1>
-          <h4>"People. Purpose. Pupusas"</h4>
-      </div>
-
-      <div class="first post">
-        <h2>Mad-Lib Game!</h2>
-        <small class="publish_date">published: 12.11.2019, 12:14</small>
-          <p>I recently created a <a href="https://mad-lib-game.netlify.com/" class="project_link">web app</a>. It's a mad-lib game.
-            For those that have never done a mad-lib before, you'll be asked for certain words (a noun, an adjective, etc).
-            Then, a short, funny story will be generated.</p>
-          <p>Feel free to share it with your friends! Take a screenshot and compare funny stories.</p>
-      </div>
-
-      <div class="second post">
-        <h2>Sample Menu Page!</h2>
-        <small class="publish_date">published: 12.11.2019, 12:50</small>
-          <p>Recently, I thought it would be fun to create a
-            <a href="https://bourbons-menu.netlify.com/" class="project_link">sample menu</a> page for one of my favorite restaurants.
-            I incorporated some animation using CSS to make the menu more interactive for the user and create a better UX.
-            It was pretty fun!</p>
-          <p><a href="https://www.yelp.com/biz/bourbons-kitchen-and-cocktails-framingham">Bourbons</a> is an amazing
-            restaurant located in Framingham, MA. The young owner, Luke Folley, has managed to build
-            a gem of a restaurant in Framingham. Visitors can expect creative, tasty cocktails, usually in tune with the seasons.
-            And the food is equally as good as the drinks. Bourbons has become a local hotspot for its service, quailty, atmosphere,
-            and good Americana food. Definitely check it out if you're ever in the area!</p>
+        <title>Lito's blog</title>
+    </head>
+    <body>
+        <div>
+            <h1>Carlos Castillo - Aspiring Developer</h1>
+            <h4>"People. Purpose. Pupusas"</h4>
         </div>
 
-      <div class="third post">
-        <h2>Partying Robot!</h2>
-        <small class="publish_date">published: 12.11.2019, 12:53</small>
-          <p>I've recently finished General Assembly's free tutorials. One of my favorite projects was making a
-            <a href="https://dancing-robot.netlify.com/" class="project_link">partying robot</a>!
-            Using CSS animation, your client, an eccentric millionaire named Cotter, hires you to build a robot that he can take
-            with him when he goes partying.</p>
-          <p>You can click three different buttons. One toggles some laser eyes for the robot. The other toggles Cotter's
-            dancing (so he can take a break). The last button changes the background color. Repeatedly pressing it creates a
-            strobe effect! Click to try it out!</p>
-          <p>Also, feel free to check out GA's tutorials at <a href="https://dash.generalassemb.ly/">Dash</a>!. They were really
-            helpful, easy to follow, and a great starting point to build my CSS & JavaScript skills with.</p>
+        <div class="first post">
+          <h2>Mad-Lib Game!</h2>
+          <small>published: 12.11.2019, 12:14</small>
+            <p>I recently created a <a href="https://mad-lib-game.netlify.com/" class="project_link">web app</a>. It's a mad-lib game.
+              For those that have never done a mad-lib before, you'll be asked for certain words (a noun, an adjective, etc).
+              Then, a short, funny story will be generated.</p>
+            <p>Feel free to share it with your friends! Take a screenshot and compare funny stories.</p>
         </div>
 
-        {% for post in posts %}
-          <div class="post">
-              <h2>{{ post.title }}</h2>
-              <small class="publish_date">published: {{ post.published_date }}</small>
-              <p>{{ post.text|linebreaksbr }}</p>
+        <div class="second post">
+          <h2>Sample Menu Page!</h2>
+          <small>published: 12.11.2019, 12:50</small>
+            <p><a href="https://www.yelp.com/biz/bourbons-kitchen-and-cocktails-framingham">Bourbons</a> is an amazing
+              restaurant located in Framingham, MA. The young owner, Luke Folley, has managed to build
+              a gem of a restaurant in Framingham. Visitors can expect creative, tasty cocktails, usually in tune with the seasons.
+              And the food is equally as good as the drinks. Bourbons has become a local hotspot for its service, quailty, atmosphere,
+              and good Americana food.</p>
+            <p>Being a huge fan of the place, I thought it would be fun to create a
+              <a href="https://bourbons-menu.netlify.com/" class="project_link">sample menu</a> page for some of their dishes,
+              incorporating animation. It was pretty fun!</p>
           </div>
-        {% endfor %}
-  </body>
+
+        <div class="third post">
+          <h2>Partying Robot!</h2>
+          <small>published: 12.11.2019, 12:53</small>
+            <p>I've recently finished General Assembly's free tutorials at <a href="https://dash.generalassemb.ly/">Dash</a>. One of my
+              favorite projects was making a <a href="https://dancing-robot.netlify.com/" class="project_link">partying robot</a>! Using CSS animation,
+              your client, an eccentric millionaire named Cotter, hires you to build a robot that he can take with him when he goes
+              partying.</p>
+            <p>You can click three different buttons. One toggles some laser eyes for the robot. The other toggles Cotter's
+              dancing (so he can take a break). The last button changes the background color. Repeatedly pressing it creates a
+              strobe effect! Click to try it out!</p>
+          </div>
+    </body>
 </html>
