--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,7 @@
     </head>
     <body>
         <div class="page-header">
+    <!--If user is authenticated (superuser i.e logged in), then show the glyphicon plus icon-->
           {% if user.is_authenticated %}
               <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
           {% endif %}
