--- a/blog/templates/blog/to_replace_postlist.html
+++ b/blog/templates/blog/to_replace_postlist.html
@@ -1,3 +1,4 @@
+<!-- This will actually not replace post_list anymore. This is to save my CSS until I can edit individual elements in post_list-->
 <head>
   <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Girassol|Noticia+Text|Permanent+Marker|Righteous&display=swap" rel="stylesheet">
 
