--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,6 +4,7 @@ body {
 
 h1 a {
     font-family: 'Righteous', cursive;
+    color: : black;
 }
 
 h2 {
@@ -68,10 +69,13 @@ p {
 }
 
 .btn-default, .btn-default:hover, .btn-default:visited {
-  float: right;
-  display: inline;
+    float: right;
+    display: inline;
+    line-height: 1;
+    margin-left: 8px;
 }
 
+/*This will be for hyperlinks within the posts */
 .project_link {
   font-family: 'Fugaz One', cursive;
   font-size: 20px;
