--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,6 +14,7 @@
     <!--If user is authenticated (superuser i.e logged in), then show the glyphicon plus icon-->
           {% if user.is_authenticated %}
               <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+              <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
           {% endif %}
             <h1><a href="/">Lito's Blog</a></h1>
             <h4>"People. Purpose. Pupusas"</h4>
