--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,15 +2,23 @@
 
 {% block content %}
     <div class="post">
-      {% if user.is_authenticated %}
-           <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-      {% endif %}
-        <h2>{{ post.title }}</h2>
-        {% if post.published_date %}
+      <!-- If you're an authorized user... -->
+        {% if user.is_authenticated %}
+            <!--... and if there's a publish date, show an edit button -->
+            {% if post.published_date %}
+                <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+                <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+            <!--Else, show the publish button (because no publish date == draft) and edit button -->
+            {% else %}
+                <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+                <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+                <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+            {% endif %}
+        {% endif %}
+            <h2>{{ post.title }}</h2>
             <div class="date">
                 {{ post.published_date }}
             </div>
-        {% endif %}
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endblock %}
