--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,11 +4,11 @@ body {
 
 h1 a {
     font-family: 'Righteous', cursive;
-    color: : orange;
+    color: : black;
 }
 
 h2 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Righteous', cursive;
     color: black;
 }
 
