--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -16,7 +16,7 @@
             <div class="date">
                 {{ post.published_date }}
             </div>
-            <p>{{ post.text|linebreaksbr }}</p>
+            <p>{{ post.text|linebreaksbr|truncatechars:350 }}</p>
         </div>
     {% endfor %}
 {% endblock %}
