--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -6,7 +6,7 @@
             <!-- This allows you to click on the title and take you to the post_detail of unpublished blog posts -->
             <h1><a href="{% url 'post_detail' pk=post.pk %}" class='drafts'>{{ post.title }}</a></h1>
             <p class="date">created: {{ post.created_date|date:'m-d-Y' }}</p>
-            <p>{{ post.text|truncatechars:200 }}</p>
+            <p>{{ post.text | safe | truncatechars:200 }}</p>
         </div>
     {% endfor %}
 {% endblock %}
