Stylized links to projects and reference links (differently)

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -30,6 +30,11 @@ i {
   position: absolute;
 }
 
+p a, p a:active {
+  color: black;
+  text-decoration: underline;
+}
+
 .page-header a, .page-header a:visited, .page-header a:active {
   color: white
 }
@@ -96,9 +101,44 @@ i {
     margin: 20px 0px 30px 20px;
 }
 
-/*This will be for hyperlinks within the posts
-.project_link {
+.project_link, .project_link:hover, .project_link:visited, .project_link:active {
   font-family: 'Fugaz One', cursive;
-  font-size: 20px;
+  font-size: 14px;
+  color: #6a2811;
 }
-*/
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
